--- a/lab_01_qt/docs/2_analytical.tex
+++ b/lab_01_qt/docs/2_analytical.tex
@@ -48,11 +48,11 @@
     \end{array} \right.$
 
     В Таблице \ref{table:example:Levenshtein} минимальное расстояние между
-    словом "кот" и "скат" равно 2. Последовательность редакторских операций,
+    строками "кот" и "скат" равно 2. Последовательность редакторских операций,
     которая привела к ответу - IMRM.
 
     \begin{table}[h]
-        \caption{Пример работы преобразования слова "кот" в "скат"}
+        \caption{Пример работы преобразования строки "кот" в "скат"}
         \centering
         \begin{tabular}{|c|c|c|c|c|c|}
         \hline
