--- a/lab_01_qt/docs/4_technological.tex
+++ b/lab_01_qt/docs/4_technological.tex
@@ -7,9 +7,9 @@
     \section{Средства реализации}
         В данной работе используется язык программирования C++, так как
         язык позволяет написать программу, работающую относительно быстро. 
-        Проект выполнен в IDE CLion \cite{visual-studio}.
+        Проект выполнен в IDE CLion.
 
-        Для замера процессорного времени была использована функция getCPUTime \cite{getCPUTime}
+        Для замера процессорного времени была использована функция getCPUTime
         реализованная David Robert Nadeau для Linux и Windows , использование которой представлено в листинге \ref{lst:getCPUTime}.
 
         \begin{lstlisting}[language=C++, label=lst:getCPUTime, caption=Функция замера времени]
