--- a/lab_01_qt/docs/5_research.tex
+++ b/lab_01_qt/docs/5_research.tex
@@ -2,25 +2,25 @@
 \label{cha:research}
     В данном разделе будут проведены эксперименты для проведения 
     сравнительного анализа алгоритмов по затрачиваемому процессорному 
-    времени\cite{CPU-time} и максимальной используемой памяти.
+    времени и максимальной используемой памяти.
 % и количеству максимально затрачиваемой памяти
     \section{Сравнительный анализ на основе замеров времени работы алгоритмов}
         В рамках данного проекта были проведёны следующие эксперименты:
 
         1) сравнение алгоритмов поиска расстояния Левенштейна и Дамерау-Левенштейна
-        на строках длиной от 0 до 4 с шагом 1 (рисунок \ref{png:test:1});
+        на строках длиной от 0 до 5 с шагом 1 (рисунок \ref{png:test:1});
         
         2) сравнение алгоритмов \footnote{Замеры времени для рекурсивного алгоритма поиска расстояния Левенштейна
-        на строках длиной от 0 до 1000 с шагом 50 не проводились, так как уже на 
+        на строках длиной от 0 до 975 с шагом 75 не проводились, так как уже на
         строках длиной 10 алгоритм работает 70 034 ms, что в 35 000 раз больше, 
         времени работы алгоритмов с использованием матрицы. Это связано с экспоненциальной асимптотикой
         времени выполнения данного алгоритма (пропорционально количеству
         рекурсивных вызовов).} поиска расстояния Левенштейна и Дамерау-Левенштейна
         на строках длиной от 0 до 1000 с шагом 50 (рисунок \ref{png:test:2}).
         
-        Тестирование проводилось на ноутбуке с процессором
-        Intel(R) Core(TM) i5-7200U CPU 2.50 GHz \cite{processor-i5-7200u}
-        под управлением Windows 10 с 8 Гб оперативной памяти.
+        Тестирование проводилось на стационаном компьютере с процессором
+        Intel(R) Core(TM) i5-7200U CPU 2.50 GHz
+        под управлением Debian 10 с 8 Гб оперативной памяти.
 
         Ниже предствалены графики зависимости времени работы алгоритмов от длины входных строк
         (рисунки \ref{graph:test:1} и \ref{graph:test:2}).
@@ -46,19 +46,6 @@
             \caption{График зависимости времени работы алгоритмов от длин строк}
             \label{graph:test:2}
         \end{figure}
-
-
-
-        % clear      10 peak cost: "71.0 Кб" heap "1.8 Кб" stacks
-        % levmatr    10 peak cost: "71.0 Кб" heap "1.8 Кб" stacks
-        % damlevmatr 10 peak cost: "71.0 Кб" heap "1.8 Кб" stacks
-        % levrec     10 peak cost: "71.0 Кб" heap "1.8 Кб" stacks
-        % levrecmatr 10 peak cost: "72.1 Кб" heap "2.2 Кб" stacks
-        % 
-        % clear      1000 peak cost: "73.0 Кб" heap "512 б" stacks
-        % damlevmatr 1000 peak cost: "7.7 Мб" heap  "512 б" stacks
-        % levmatr    1000 peak cost: "7.7 Мб" heap  "512 б" stacks
-        % levrecmatr 1000 peak cost: "7.7 Мб" heap  "187.8 Кб" stacks
 
     \section{Вывод}
         В данном разделе были поставлены эксперименты по замеру времени
