fix texify template guts that dont create contains

--- a/lab_01_qt/docs/G7-32.sty
+++ b/lab_01_qt/docs/G7-32.sty
@@ -19,7 +19,7 @@
  \chapter*{\CYRR\cyre\cyrf\cyre\cyrr\cyra\cyrt}%
 }
 \addto\captionsrussian{%содержание
- \def\contentsname{%
+ \contentsname{%
   \CYRS\cyro\cyrd\cyre\cyrr\cyrzh\cyra\cyrn\cyri\cyre}%
 }
 \newenvironment{abstract}{%То же самое, только как у белых людей -- Коротков И.
