--- a/lab_01_qt/docs/2_analytical.tex
+++ b/lab_01_qt/docs/2_analytical.tex
@@ -1,6 +1,6 @@
 \chapter{ Аналитический раздел}
 \label{cha:analytical}
-    \section{Цель и задачи практики}
+    \section{Цель и задачи}
 
     {\bf Цель}: реализовать и сравнить по эффективности алгоритмы поиска
     расстояния Левенштейна и Дамерау-Левенштейна.
@@ -23,9 +23,9 @@
         \item вставка (I -- Insert);
         \item удаление (D -- Delete);
         \item замена (R -- Replace);
-        \item совпадение (M -- Match).
     \end{enumerate}
-    
+
+    Также есть операция совпадение (M -- Match).
     Операции I, D, R имеют штраф 1, а операция M -- 0.
 
     Пусть $s_{1}$ и $s_{2}$ — две строки (длиной M и N соответственно) в некотором алфавите V,
@@ -80,12 +80,15 @@ $\lambda$ & 0 & 1 & 2 & 3 & 4 \\ \hline
             min \left\{ \begin{array}{lll}
                 s1[1..i], s2[1..j-1] + 1                 \\
                 s1[1..i-1], s2[1..j] + 1                 \\
-                s1[1..i-2], s2[1..j-2] + 1               \\ 
+                s1[1..i-2], s2[1..j-2] + 1               \\
                 s1[1..i-1],s2[1..j-1] + M(s[i], s[j])    \\
                 \end{array} \right. & \textrm{$i, j > 1, s1_{i-1} = s2_j, s1_i = s2_{j-1}$}\\
 
-
+            min \left\{ \begin{array}{lll}
+                s1[1..i], s2[1..j-1]+ 1                  \\
+                s1[1..i-1], s2[1..j]) + 1                \\
+                s1[1..i-1],s2[1..j-1] + M(s[i], s[j])    \\
+                \end{array} \right. & \textrm{иначе}.\\
         \end{array} \right.
     \end{equation}
-
 \newpage
