--- a/lab_01_qt/docs/3_design.tex
+++ b/lab_01_qt/docs/3_design.tex
@@ -23,7 +23,7 @@
             \end{enumerate}
             \item Экспериментальный режим: 
             \begin{enumerate}
-                \item вывод таблицы с процессорным временем работы (Рисунок \ref{png:test:1}).
+                \item вывод таблицы с процессорным временем работы (Рисунок \ref{fig:1}).
             \end{enumerate}
         \end{enumerate}
         
