--- a/lab_01_qt/docs/5_research.tex
+++ b/lab_01_qt/docs/5_research.tex
@@ -8,7 +8,7 @@
         В рамках данного проекта были проведёны следующие эксперименты:
 
         1) сравнение алгоритмов поиска расстояния Левенштейна и Дамерау-Левенштейна
-        на строках длиной от 0 до 5 с шагом 1 (рисунок \ref{png:test:1});
+        на строках длиной от 0 до 5 с шагом 1 (рисунок~\ref{fig:1});
         
         2) сравнение алгоритмов \footnote{Замеры времени для рекурсивного алгоритма поиска расстояния Левенштейна
         на строках длиной от 0 до 975 с шагом 75 не проводились, так как уже на
@@ -16,36 +16,42 @@
         времени работы алгоритмов с использованием матрицы. Это связано с экспоненциальной асимптотикой
         времени выполнения данного алгоритма (пропорционально количеству
         рекурсивных вызовов).} поиска расстояния Левенштейна и Дамерау-Левенштейна
-        на строках длиной от 0 до 1000 с шагом 50 (рисунок \ref{png:test:2}).
+        на строках длиной от 0 до 1000 с шагом 50 (рисунок~\ref{fig:2}).
         
-        Тестирование проводилось на стационаном компьютере с процессором
-        Intel(R) Core(TM) i5-7200U CPU 2.50 GHz
+        Эксперимент проводился на стационаном компьютере с процессором
+        Intel(R) Core(TM) i5-7200U CPU 2.50 GHz \cite{processor-i5-7200u}
         под управлением Debian 10 с 8 Гб оперативной памяти.
 
         Ниже предствалены графики зависимости времени работы алгоритмов от длины входных строк
-        (рисунки \ref{graph:test:1} и \ref{graph:test:2}).
+        (рисунки~\ref{fig:12} и~\ref{fig:22}).
 
-        \begin{figure}[h!]
-            \centering
-            \includegraphics[scale=0.7]{TimeTable5Elems.png}
-            \caption{Результаты замера времени на строках длиной от 0 до 5}
-            \label{png:test:1}
-        
-            \includegraphics[scale=0.7]{TimeTable975Elems.png}
-            \caption{Результаты замера времени на строках длиной от 0 до 975}
-            \label{png:test:2}
-        \end{figure}
+        Обозначения:\newline
+            a) levNR - алгоритм Левенштейна без рекурсии.\newline
+            b) levRNC - алгоритм Левенштейна с рекурсией и без кэша.\newline
+            c) levRWC - алгоритм Левенштейна с рекурсией и с кэшем.\newline
+            d) levDamR - алгоритм Дамерау-Левенштейна с рекурсией.\newline
 
-        \begin{figure}[h!]
-            \centering
-            \includegraphics[scale=0.7]{smallGraphic.png}
-            \caption{График зависимости времени работы алгоритмов от длин строк}
-            \label{graph:test:1}
+    \begin{figure}[h!]
+        \centering
+        \includegraphics[scale=0.7]{img/TimeTable5Elems}
+        \caption{Результаты замера времени на строках длиной от 0 до 5 в секундах}
+        \label{fig:1}
 
-            \includegraphics[scale=0.7]{LargeGraphic.png}
-            \caption{График зависимости времени работы алгоритмов от длин строк}
-            \label{graph:test:2}
-        \end{figure}
+        \includegraphics[scale=0.7]{img/TimeTable975Elems}
+        \caption{Результаты замера времени на строках длиной от 0 до 975 в секундах}
+        \label{fig:2}
+    \end{figure}
+
+    \begin{figure}[h!]
+        \centering
+        \includegraphics[scale=0.7]{img/smallGraphic}
+        \caption{График зависимости времени работы алгоритмов от длин строк}
+        \label{fig:12}
+
+        \includegraphics[scale=0.7]{img/LargeGraphic}
+        \caption{График зависимости времени работы алгоритмов от длин строк}
+        \label{fig:22}
+    \end{figure}
 
     \section{Вывод}
         В данном разделе были поставлены эксперименты по замеру времени
@@ -54,7 +60,7 @@
         на длинах строк превышающих 3 на 136 \% быстрее, чем алгоритм поиска
         расстояния Левенштейна рекурсивно с заполнением матрицы и на 42 \%,
         чем реализация алгоритм поиска расстояния Дамерау-Левенштейна. На строках
-        длиной менее 3х символов рекурсивная реализиция выигрывает матричные, так
+        длиной менее 3х символов рекурсивная реализиция быстрее матричной, так
         как не выделяет в куче место под хранение матрицы.  
         
         По расходу памяти матричные алгоритмы проигрывают рекурсивному, так как
