--- a/lab_01_qt/docs/6_conclusion.tex
+++ b/lab_01_qt/docs/6_conclusion.tex
@@ -9,7 +9,7 @@
     на длинах строк превышающих 3 на 136 \% быстрее, чем алгоритм поиска
     расстояния Левенштейна рекурсивно с заполнением матрицы и на 42 \%,
     чем реализация алгоритм поиска расстояния Дамерау-Левенштейна. На строках
-    длиной менее 3х символов рекурсивная реализиция выигрывает матричные, так
+    длиной менее 3 символов рекурсивная реализиция работает бысрее матричной, так
     как не выделяет в куче место под хранение матрицы.
     
     Из теоритического анализа максимальной затрачиваемой памяти каждым из алгоритмов 
