--- a/lab_01_qt/docs/report.bib
+++ b/lab_01_qt/docs/report.bib
@@ -1,23 +1,17 @@
-@misc{visual-studio,
-  title = {IDE Visual Studio 2019},
-  note = {(дата обращения: 11.09.2020)},
-  url = {https://visualstudio.microsoft.com/ru/vs/}
+@online{clion,
+  title = {IDE CLion 2021},
+  note = {(дата обращения: 11.09.2021)},
+  url = {https://www.jetbrains.com/clion/}
 }
 
-@misc{QueryPerformanceCounter,
+@online{getCPUTime,
   title        = {Acquiring high-resolution time stamps},
-  url          = {https://docs.microsoft.com/ru-ru/windows/win32/sysinfo/acquiring-high-resolution-time-stamps?redirectedfrom=MSDN},
-  note         = {(дата обращения: 11.09.2020)},
+  url          = {https://gist.github.com/Randl/45bcca59720f661fa033a67d5f44bff0},
+  note         = {(дата обращения: 11.09.2021)},
 }
 
-@misc{CPU-time,
-  title        = {Time Basics},
-  url          = {https://www.gnu.org/software/libc/manual/html_node/Time-Basics.html},
-  note         = {(дата обращения: 11.09.2020)}
-}
-
-@misc{processor-i5-7200u,
+@online{processor-i5-7200u,
   title        = {Intel® Core™ i5-7200U Processor},
   url          = {https://www.intel.com/content/www/us/en/products/processors/core/i5-processors/i5-7200u.html},
-  note         = {(дата обращения: 26.09.2020)}
+  note         = {(дата обращения: 26.09.2021)}
 }
