--- a/lab_01_qt/docs/3_design.tex
+++ b/lab_01_qt/docs/3_design.tex
@@ -1,4 +1,4 @@
-\chapter{ Констукторский раздел}
+\chapter{Констукторский раздел}
 \label{cha:design}
     В данном разделе будут рассмотрены схемы алгоритмов, требования к функциональности ПО,
     и опредены способы тестирования.
@@ -37,28 +37,28 @@
 
     \begin{figure}[h!]
         \centering
-        \includegraphics[scale=0.18]{LevMatr}
+        \includegraphics[scale=0.18]{img/LevMatr}
         \caption{Схема нерекурсивного поиска с заполнением матрицы}
         \label{schema:matr:Levenstein}
     \end{figure}
 
     \begin{figure}[h!]
         \centering
-        \includegraphics[scale=0.18]{LevRec}
+        \includegraphics[scale=0.18]{img/LevRec}
         \caption{Схема рекурсивого поиска без заполнения матрицы}
         \label{schema:rec:Levenstein}
     \end{figure}
 
     \begin{figure}[h!]
         \centering
-        \includegraphics[scale=0.16]{DamLevMatr}
+        \includegraphics[scale=0.16]{img/DamLevMatr}
         \caption{Схема рекурсивого поиска с заполнением матрицы}
         \label{schema:rec-matr:Levenstein}
     \end{figure}
 
     \begin{figure}[h!]
         \centering
-        \includegraphics[scale=1]{LevGraph}
+        \includegraphics[scale=1]{img/LevGraph}
         \caption{Схема поиска р. Дамерау-Левенштейна}
         \label{schema:matr:Dameray-Levenstein}
     \end{figure}
