--- a/lab_01_qt/docs/5_research.tex
+++ b/lab_01_qt/docs/5_research.tex
@@ -19,7 +19,7 @@
         на строках длиной от 0 до 1000 с шагом 50 (рисунок~\ref{fig:2}).
         
         Эксперимент проводился на стационаном компьютере с процессором
-        Intel(R) Core(TM) i5-7200U CPU 2.50 GHz \cite{processor-i5-7200u}
+        Intel(R) Core(TM) i5-7200U CPU 2.50 GHz
         под управлением Debian 10 с 8 Гб оперативной памяти.
 
         Ниже предствалены графики зависимости времени работы алгоритмов от длины входных строк
