--- a/lab_01_qt/docs/report.bib
+++ b/lab_01_qt/docs/report.bib
@@ -1,16 +1,16 @@
-@online{clion,
+@misc{clion,
   title = {IDE CLion 2021},
   note = {(дата обращения: 11.09.2021)},
   url = {https://www.jetbrains.com/clion/}
 }
 
-@online{getCPUTime,
+@misc{getCPUTime,
   title        = {Acquiring high-resolution time stamps},
   url          = {https://gist.github.com/Randl/45bcca59720f661fa033a67d5f44bff0},
   note         = {(дата обращения: 11.09.2021)},
 }
 
-@online{processor-i5-7200u,
+@misc{processor-i5-7200u,
   title        = {Intel® Core™ i5-7200U Processor},
   url          = {https://www.intel.com/content/www/us/en/products/processors/core/i5-processors/i5-7200u.html},
   note         = {(дата обращения: 26.09.2021)}
