--- a/lab_01_qt/docs/report.tex
+++ b/lab_01_qt/docs/report.tex
@@ -24,6 +24,21 @@
 
 \backmatter % Здесь заканчивается нумерованная часть документа и начинаются ссылки и
 \input{6_conclusion.tex}
-\input{7_biblio.tex}
+%\input{7_biblio.tex}
+\chapter{Список использованных источников}
+\label{ch:resources}
+    1) GetCpuTime.
+       // [Электронный ресурс].
+       Режим доступа: https://gist.github.com/Ran\linebreak dl/45bcca59720f661fa033a67d5f44bff0, (дата обращения: 11.09.2021).
+
+    2) IDE CLion 2021.
+       //  [Электронный  ресурс].
+       Режим  доступа: https://www.jetbrains.com\linebreak /clion/, (дата обращения: 11.09.2021).
+
+    3) processor-i5-7200u.
+       // [Электронный ресурс].
+       Режим доступа: https://www.intel.com/\linebreak content/www/us/en/products/processors/core/i5-processors/i5-7200u.html, (дата обращения: 11.0\linebreak 9.2021).
+
+
 
 \end{document}
